[gd_scene load_steps=4 format=2]

[ext_resource path="res://Pause_Popup.gd" type="Script" id=1]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Pausa" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
modulate = Color( 1, 1, 1, 0.419608 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 210.0
margin_top = 127.0
margin_right = 429.0
margin_bottom = 233.0

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 219.0
margin_bottom = 14.0
text = "PAUSA"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 219.0
margin_bottom = 38.0
custom_constants/separation = 44
alignment = 1

[node name="ButtonContinuar" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 108.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../ButtonSalir")
focus_neighbour_top = NodePath("../../ButtonInstrucciones")
focus_neighbour_right = NodePath("../ButtonSalir")
focus_neighbour_bottom = NodePath("../../CheckButton")
text = "CONTINUAR"

[node name="ButtonSalir" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 200.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../ButtonContinuar")
focus_neighbour_top = NodePath("../../ButtonInstrucciones")
focus_neighbour_right = NodePath("../ButtonContinuar")
focus_neighbour_bottom = NodePath("../../CheckButton")
text = "SALIR"

[node name="CheckButton" type="CheckButton" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 219.0
margin_bottom = 82.0
focus_neighbour_top = NodePath("../HBoxContainer/ButtonContinuar")
focus_neighbour_bottom = NodePath("../ButtonInstrucciones")
text = "PANTALLA COMPLETA"

[node name="ButtonInstrucciones" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 219.0
margin_bottom = 106.0
focus_neighbour_top = NodePath("../CheckButton")
focus_neighbour_bottom = NodePath("../HBoxContainer/ButtonContinuar")
text = "INSTRUCCIONES"

[node name="ControlInstrucciones" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="ControlInstrucciones"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="ControlInstrucciones"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ControlInstrucciones/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 590.0
margin_bottom = 360.0

[node name="LabelInstrucciones" type="Label" parent="ControlInstrucciones/MarginContainer/VBoxContainer"]
margin_right = 540.0
margin_bottom = 99.0
text = "Usa las teclas Z y C para cambiar de forma.

Presiona Z in el aire mientras eres un cuadrado para un ataque que derrota enemigos y destrulle obstaculos.

Mientras eres un circulo puedes realizar un salto doble"
autowrap = true

[node name="CenterContainer" type="CenterContainer" parent="ControlInstrucciones/MarginContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 540.0
margin_bottom = 123.0

[node name="Atras" type="Button" parent="ControlInstrucciones/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 248.0
margin_right = 291.0
margin_bottom = 20.0
shortcut = SubResource( 2 )
text = "atras"
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/HBoxContainer/ButtonContinuar" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/HBoxContainer/ButtonSalir" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/ButtonInstrucciones" to="." method="_on_ButtonInstrucciones_pressed"]
[connection signal="pressed" from="ControlInstrucciones/MarginContainer/VBoxContainer/CenterContainer/Atras" to="." method="_on_Atras_pressed"]
